car_movement+collisions

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="godot_template"
-main_scene="res://SplashScene/SplashScreen.tscn"
+main_scene="res://Game/tutorial/demo.tscn"
 icon="res://icon.png"
 
 [autoload]
@@ -12,11 +12,19 @@ menu_music="*res://autoload/menu_music.tscn"
 
 [display]
 
+width=1400
+height=900
 stretch_mode="2d"
-width=600
-height=800
 orientation="portrait"
+
+[input]
+
+s=[key(S)]
+left=[key(Left)]
+right=[key(Right)]
+acc=[key(Up)]
+break=[key(Down)]
 
 [render]
 
-default_clear_color=#ff000000
+default_clear_color=#ff3c3c3c
