tilemap and driving AI

--- a/engine.cfg
+++ b/engine.cfg
@@ -17,6 +17,10 @@ height=900
 stretch_mode="2d"
 orientation="portrait"
 
+[editor_plugins]
+
+enabled=["vnen.tiled_importer"]
+
 [input]
 
 s=[key(S)]
