nitro and shooting

--- a/engine.cfg
+++ b/engine.cfg
@@ -23,7 +23,8 @@ enabled=["vnen.tiled_importer"]
 
 [input]
 
-s=[key(S)]
+nitro=[key(A)]
+shoot=[key(S)]
 left=[key(Left)]
 right=[key(Right)]
 acc=[key(Up)]
